<resources>
    <string name="app_name">Operaciones</string>
    <string name="titulo1">Operaciones</string>
    <string name="titulo2">1. Suma</string>
    <string name="titulo3">2. Resta</string>
    <string name="titulo5">3. Multiplicaciòn</string>
    <string name="titulo4">4. Divisiòn</string>
    <string name="btn1">Ir</string>
    <string name="btn2">Ir</string>
    <string name="btn3">Ir</string>
    <string name="btn4">Ir</string>
    <string name="titulo6">Suma</string>
    <string name="titulo7">Resta</string>
    <string name="titulo8">Multiplicaciòn</string>
    <string name="titulo9">Divisiòn</string>
    <string name="text1">Primer numero</string>
    <string name="number">number</string>
    <string name="numero1">Ingrese primer numero</string>
    <string name="num2">Ingrese segundo numero</string>
    <string name="txtnum2">Segundo numero</string>
    <string name="txtresultado">Resultado</string>
    <string name="btnsumar">Sumar</string>
    <string name="btnR">Regresar</string>
    <string name="titulo20">Primer numero</string>
    <string name="titulo21">Segundo numero</string>
    <string name="lbl2">Resultado</string>
    <string name="btnE">Regresar</string>
    <string name="titulo25">Primer numero</string>
    <string name="titulo26">Segundo numero</string>
    <string name="btn10">Multiplicar</string>
    <string name="btn11">Regresar</string>
    <string name="lblS">Resultado</string>
    <string name="titulo30">Primer numero</string>
    <string name="titulo31">Segundo numero</string>
    <string name="lblU">Resultado</string>
    <string name="btn15">Dividir</string>
    <string name="btn16">Regresar</string>
</resources>
